Fix dropdown issue on safari mobile

--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -61,6 +61,16 @@ $navbar_height: 50px;
     max-height: calc(100vh - 50px);
 }
 
+.z-index-100 {
+    position: relative;
+    z-index: 100;
+}
+
+.content {
+    position: relative;
+    z-index: 0;
+}
+
 .file-grid {
     display: flex;
     flex-flow: row wrap;
